# polka

./: .gitignore  package-lock.json  package.json  tailwind.config.js
onboarding/: 00_INDEX.md  01_QUICK_START.md  02_README.md  03_DEVELOPMENT_WORKFLOW.md  04_TROUBLESHOOTING.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs  models.rs  speech.rs
src/components/: BulkDeleteConfirmationDialog.tsx  DeleteConfirmationDialog.tsx  Layout.tsx  NotionLayout.tsx  NotionToolbar.tsx  ProtectedRoute.tsx  SessionCard.tsx  SessionList.tsx  SessionManager.tsx  TabBar.tsx  VUMeter.tsx  ViewToggle.tsx  index.ts
src/components/dialog/: BulkDeleteConfirmationDialog.tsx  DeleteConfirmationDialog.tsx  index.ts
src/components/feedback/: error-banner.tsx  error-message.tsx  index.ts  toast-provider.tsx  toast.tsx
src/components/layout/: Layout.tsx  NotionLayout.tsx  NotionToolbar.tsx  PageTransition.tsx  index.ts
src/components/recorder/: CatchUpSummaryModal.tsx  NotesHighlightsPane.tsx  RecorderLayout.tsx  RecordingControls.tsx  (+3 more)
src/contexts/: FormattingContext.tsx  FullscreenContext.tsx
src/hooks/: index.ts  useAsyncOperation.ts  useAutoSave.ts  useConfirmationDialog.ts  useTabs.ts
src/layouts/: AppLayout.tsx
src/lib/: auth.tsx  sessions.ts  status-utils.tsx  theme.tsx  utils.ts
src/pages/: Archive.tsx  Home.tsx  Library.tsx  Login.tsx  Notes.tsx  Session.tsx  Settings.tsx  Transcript.tsx
src/store/: sessions.ts  tabs.ts
src/types/: index.ts  session.ts  transcript.ts
(+26 files in other folders)
