[package]
name = "polka"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.99"
thiserror = "2.0.16"
tauri-plugin-log = "2.7.0"
rusqlite = "0.37.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
time = "0.3.43"
cpal = "0.16.0"
dirs = "6.0.0"
nanoid = "0.4.0"
hound = "3.5.1"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19.0"
chrono = { version = "0.4", features = ["serde"] }

